[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-urlcheck"
version = "0.1.0"
description = "LangChain tool that lets agents verify URL safety before navigation via URLCheck MCP server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "CybrLab.AI", email = "contact@cybrlab.ai" }
]
keywords = [
    "langchain",
    "mcp",
    "model-context-protocol",
    "url-safety",
    "url-scanner",
    "phishing",
    "malware",
    "cybersecurity",
    "ai-agent",
    "agent-tools",
    "llm-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "langchain-core>=0.3.0,<2.0.0",
]

[project.optional-dependencies]
mcp-adapters = [
    "langchain-mcp-adapters>=0.2.0",
]
langchain-full = [
    "langchain>=0.3.0,<2.0.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "langchain-tests>=1.1.0,<1.2.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "langchain-urlcheck[langchain-full,mcp-adapters,dev]",
]

[project.urls]
Homepage = "https://urlcheck.dev"
Documentation = "https://github.com/cybrlab-ai/langchain-urlcheck"
Repository = "https://github.com/cybrlab-ai/langchain-urlcheck"
Issues = "https://github.com/cybrlab-ai/langchain-urlcheck/issues"
Changelog = "https://github.com/cybrlab-ai/langchain-urlcheck/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["langchain_urlcheck"]

[tool.hatch.build.targets.sdist]
include = [
    "langchain_urlcheck/*.py",
    "langchain_urlcheck/py.typed",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
]
